# glpi_bot

./: .dockerignore  .env  .gitignore  .gitignore.swp  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  test-docker-compose.yml  test.py
app/: main.py  pyproject.toml  test_mail.py
app/bot/: __init__.py  keyboards.py  middlewares.py  states.py
app/bot/handlers/: __init__.py  admins.py  authorization.py  deffault.py  tickets.py
app/config_handlers/: __init__.py  ad_config.py  mail_config.py  settings.py
app/docks/: ad_config.example.ini  mail_config.example.ini
app/glpi/: api.py  models.py
app/mail/: __init__.py  mail_sender.py
app/services/: __init__.py  ad.py  async_ad.py  db.py  exceptions.py  mail.py
app/tests/: create_ticket_by_user.py
bot/: __init__.py  keyboards.py
bot/handlers/: deffault.py
config_examples/: .env_test  settings.example.ini
config_handlers/: __init__.py  logging_config.py
docks/: logging_config.example.json  organisations.example.jsonc  settings.example.ini
glpi/: __init__.py  api.py
glpi_bot/: __init__.py  main.py
glpi_bot/bot/: __init__.py  keyboards.py  menu.py  models.py  states.py
glpi_bot/bot/handlers/: __init__.py  (+4 more)
glpi_bot/config_handlers/: __init__.py  logging_config.py  mail_config.py  organizations.py  settings.py
glpi_bot/database/: __init__.py  models.py  session.py
glpi_bot/glpi/: __init__.py  api.py  base.py  models.py  session.py
glpi_bot/services/: __init__.py  db_service.py  glpi_service.py  mail.py  mail_service.py
scripts/: build.sh  clean-full.sh  clean.sh  entrypoint.sh  rebuild.ps1  run.ps1  run.sh  stop.sh
src/: main.py  test_main.py
src/tests/: conftest.py  get_user.py  send_ticket.py  test_create_ticket.py  test_get_all_entities.py  test_get_all_user.py  test_get_organisation_data.py  test_get_user.py
tests/: send_ticket.py  test.py
tests/modules/: create_ticket_by_user.py
(+114 files in other folders)
