[tool.poetry]
name = "glpi-bot"
version = "0.1.0"
description = "TG-bot for interaction with the GLPI"
authors = ["dyuzha <matvey10d@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^3.20.0"
requests = "^2.32.3"
aiosmtplib = "^4.0.1"
sqlalchemy = "^2.0.40"
ldap3 = "^2.9.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
