[tool.poetry]
name = "glpi-bot"
version = "0.1.0"
description = "TG-bot for interaction with the GLPI"
authors = ["dyuzha <matvey10d@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^3.20.0"
requests = "^2.32.3"
aiosmtplib = "^4.0.1"
sqlalchemy = "^2.0.40"
ldap3 = "^2.9.1"
aioresponses = "^0.7.8"


[tool.poetry.dev-dependencies]
pytest = "*"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
requests-mock = "^1.12.1"
pytest-asyncio = "^1.0.0"


[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--asyncio-mode=auto"
testpaths = ["tests"]
python_files = "test_*.py"
log_cli = true
log_cli_level = "DEBUG"
markers = [
    "integration: mark test as integration-level)",
    "int-glpi: mark test as integration-level (requires real GLPI server)",
    "int-ad: mark test as integration-level (requires real AD API server)",
]
