[project]
name = "glpi-bot"
version = "0.1.0"
description = "TG-bot for interaction with the GLPI"
authors = [
    {name = "dyuzha",email = "matvey10d@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
